--- a/.github/workflows/static-check.yaml
+++ b/.github/workflows/static-check.yaml
@@ -86,8 +86,10 @@ jobs:
       - name: C++ Core Lint
         uses: jidicula/clang-format-action@v4.13.0
         with:
-          clang-format-version: '13'
+          clang-format-version: '14'
           check-path: 'core'
+          include-regex: '.*\.(cpp|h)$'
+          fallback-style: 'Google'
 
       - name: Go Plugin Lint
         run: make lint
