Update submodule coolbpf to commit c24d3993c16051c00d86eae063958898e435b5a7
Fix compile dependency and 'cannot bind packed field' compile error

--- a/core/ebpf/driver/CMakeLists.txt
+++ b/core/ebpf/driver/CMakeLists.txt
@@ -30,7 +30,7 @@ if (LINUX)
     add_custom_target(
         install_coolbpf ALL
         COMMAND ${CMAKE_COMMAND} --install ${CMAKE_BINARY_DIR}
-        DEPENDS coolbpf
+        DEPENDS coolbpf coolbpf_static
     )
 
     include_directories("${DEPS_INCLUDE_ROOT}/coolbpf")
