--- a/core/ebpf/driver/CMakeLists.txt
+++ b/core/ebpf/driver/CMakeLists.txt
@@ -36,13 +36,13 @@ if (LINUX)
     include_directories("${DEPS_INCLUDE_ROOT}/coolbpf")
 
     file(GLOB LIB_SOURCE_FILES *.cpp *.h)
-    add_library(ebpf_driver SHARED ${LIB_SOURCE_FILES})
-    target_link_libraries(ebpf_driver coolbpf)
-    add_dependencies(ebpf_driver install_coolbpf)
-    target_link_options(ebpf_driver PRIVATE "-Wl,-rpath=.:${DEFAULT_DEPS_ROOT}/lib")
+    add_library(EbpfDriver SHARED ${LIB_SOURCE_FILES})
+    target_link_libraries(EbpfDriver coolbpf)
+    add_dependencies(EbpfDriver install_coolbpf)
+    target_link_options(EbpfDriver PRIVATE "-Wl,-rpath=.:${DEFAULT_DEPS_ROOT}/lib")
 
     add_executable(standalone Standalone.cpp)
     add_dependencies(standalone install_coolbpf)
-    add_dependencies(standalone ebpf_driver)
+    add_dependencies(standalone EbpfDriver)
     target_link_libraries(standalone pthread z dl)
 endif ()
