--- a/core/unittest/input/CMakeLists.txt
+++ b/core/unittest/input/CMakeLists.txt
@@ -18,6 +18,9 @@ project(input_unittest)
 add_executable(input_file_unittest InputFileUnittest.cpp)
 target_link_libraries(input_file_unittest ${UT_BASE_TARGET})
 
+add_executable(input_static_file_unittest InputStaticFileUnittest.cpp)
+target_link_libraries(input_static_file_unittest ${UT_BASE_TARGET})
+
 add_executable(input_container_stdio_unittest InputContainerStdioUnittest.cpp)
 target_link_libraries(input_container_stdio_unittest ${UT_BASE_TARGET})
 
@@ -44,6 +47,7 @@ target_link_libraries(input_internal_metrics_unittest ${UT_BASE_TARGET})
 
 include(GoogleTest)
 gtest_discover_tests(input_file_unittest)
+gtest_discover_tests(input_static_file_unittest)
 gtest_discover_tests(input_container_stdio_unittest)
 gtest_discover_tests(input_prometheus_unittest)
 gtest_discover_tests(input_ebpf_file_security_unittest)
