feat: windows build
feat: windows opt

feat: some new windows adaptation

opt: rm some windows TODO mark

format code

add workflows

add workflows

add workflows

tmp rm workflow

add workflows

add workflows

fix build

fix build script

fix build script

fix build script

add ut

add ut

fix ut build

fix ut build

tmp comment some ut

tmp comment some ut

fix run ut bat

fix run ut bat

fix ut

 tmp comment some ut

tmp rm ut

fix ut

reset workflow

fix lint

fix ut

fix ut

fix metric event ut

fix: review comment

opt: delete FlushStrategy.cpp

opt: some comments

fix: windows enterprise daemon

fix: some ut and review comments

fix: pipeline update ut can't finish

opt: delete windows daemon

fix: compile error

fix: typo

fix: rebase error

fix: format error

fix: ConfigWatcher ut

fix: undef GetObject

fix: some review comments

--- a/core/unittest/common/CMakeLists.txt
+++ b/core/unittest/common/CMakeLists.txt
@@ -17,8 +17,7 @@ project(common_unittest)
 
 add_executable(common_simple_utils_unittest SimpleUtilsUnittest.cpp
         FileSystemUtilUnittest.h
-        DevInodeUnittest.h
-        TimeUtilUnittest.h)
+        DevInodeUnittest.h)
 target_link_libraries(common_simple_utils_unittest ${UT_BASE_TARGET})
 
 add_executable(common_logfileoperator_unittest LogFileOperatorUnittest.cpp)
