--- a/core/unittest/input/CMakeLists.txt
+++ b/core/unittest/input/CMakeLists.txt
@@ -42,6 +42,16 @@ target_link_libraries(input_internal_alarms_unittest ${UT_BASE_TARGET})
 add_executable(input_internal_metrics_unittest InputInternalMetricsUnittest.cpp)
 target_link_libraries(input_internal_metrics_unittest ${UT_BASE_TARGET})
 
+set(EBPF_DRIVER_DIR "${CMAKE_BINARY_DIR}/ebpf/driver")
+set(COOLBPF_DIR "${CMAKE_BINARY_DIR}/ebpf/driver/coolbpf/src")
+
+add_custom_command(TARGET input_ebpf_process_security_unittest POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${EBPF_DRIVER_DIR}/libEbpfDriver.so $<TARGET_FILE_DIR:input_ebpf_process_security_unittest>
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${COOLBPF_DIR}/libcoolbpf.so.1.0.0 $<TARGET_FILE_DIR:input_ebpf_process_security_unittest>
+)
+
 include(GoogleTest)
 gtest_discover_tests(input_file_unittest)
 gtest_discover_tests(input_container_stdio_unittest)
