--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -28,4 +28,5 @@ add_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
 add_unittest(table_unittest TableUnittest.cpp)
 add_unittest(protocol_parser_unittest ProtocolParserUnittest.cpp)
 add_unittest(manager_unittest ManagerUnittest.cpp)
-
+add_unittest(common_util_unittest CommonUtilUnittest.cpp)
+add_unittest(networkobserver_event_unittest NetworkObserverEventUnittest.cpp)
