--- a/core/unittest/models/CMakeLists.txt
+++ b/core/unittest/models/CMakeLists.txt
@@ -42,6 +42,9 @@ target_link_libraries(pipeline_event_group_unittest ${UT_BASE_TARGET})
 add_executable(event_pool_unittest EventPoolUnittest.cpp)
 target_link_libraries(event_pool_unittest ${UT_BASE_TARGET})
 
+add_executable(array_view_unittest ArrayViewUnittest.cpp)
+target_link_libraries(array_view_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(pipeline_event_unittest)
 gtest_discover_tests(log_event_unittest)
@@ -52,6 +55,7 @@ gtest_discover_tests(raw_event_unittest)
 gtest_discover_tests(pipeline_event_ptr_unittest)
 gtest_discover_tests(pipeline_event_group_unittest)
 gtest_discover_tests(event_pool_unittest)
+gtest_discover_tests(array_view_unittest)
 
 add_executable(event_group_benchmark EventGroupBenchmark.cpp)
 target_link_libraries(event_group_benchmark ${UT_BASE_TARGET})
