--- a/core/unittest/config/CMakeLists.txt
+++ b/core/unittest/config/CMakeLists.txt
@@ -47,6 +47,9 @@ target_link_libraries(common_config_provider_unittest ${UT_BASE_TARGET})
 add_executable(pipeline_config_watcher_unittest PipelineConfigWatcherUnittest.cpp)
 target_link_libraries(pipeline_config_watcher_unittest ${UT_BASE_TARGET})
 
+add_executable(onetime_config_manager_unittest OnetimeConfigManagerUnittest.cpp)
+target_link_libraries(onetime_config_manager_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(pipeline_config_unittest)
 gtest_discover_tests(task_config_unittest)
@@ -58,3 +61,4 @@ endif ()
 gtest_discover_tests(config_feedbackable_unittest)
 gtest_discover_tests(common_config_provider_unittest)
 gtest_discover_tests(pipeline_config_watcher_unittest)
+gtest_discover_tests(onetime_config_manager_unittest)
