--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -30,3 +30,7 @@ add_unittest(protocol_parser_unittest ProtocolParserUnittest.cpp)
 add_unittest(manager_unittest ManagerUnittest.cpp)
 add_unittest(common_util_unittest CommonUtilUnittest.cpp)
 add_unittest(networkobserver_event_unittest NetworkObserverEventUnittest.cpp)
+add_unittest(conntracker_unittest ConnTrackerUnittest.cpp)
+add_unittest(conntracker_manager_unittest ConnTrackerManagerUnittest.cpp)
+add_unittest(networkobserver_unittest NetworkObserverUnittest.cpp)
+add_unittest(worker_unittest WorkerUnittest.cpp)
