add id_allocator ut

--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -6,6 +6,12 @@ include(GoogleTest)
 set(EBPF_DRIVER_DIR "${CMAKE_BINARY_DIR}/ebpf/driver")
 set(COOLBPF_DIR "${CMAKE_BINARY_DIR}/third_party/coolbpf/src")
 
+function(add_driver_unittest target_name source_file)
+    add_executable(${target_name} ${source_file})
+    target_link_libraries(${target_name} ${UT_BASE_TARGET} EbpfDriver)
+    gtest_discover_tests(${target_name})
+endfunction()
+
 function(add_unittest target_name source_file)
     add_executable(${target_name} ${source_file})
     target_link_libraries(${target_name} ${UT_BASE_TARGET})
@@ -24,7 +30,6 @@ add_unittest(aggregator_unittest AggregatorUnittest.cpp)
 add_unittest(ebpf_server_unittest eBPFServerUnittest.cpp)
 add_unittest(sampler_unittest SamplerUnittest.cpp)
 add_unittest(consumer_unittest ConsumerUnittest.cpp)
-add_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
 add_unittest(table_unittest TableUnittest.cpp)
 add_unittest(protocol_parser_unittest ProtocolParserUnittest.cpp)
 add_unittest(manager_unittest ManagerUnittest.cpp)
@@ -34,3 +39,6 @@ add_unittest(conntracker_unittest ConnTrackerUnittest.cpp)
 add_unittest(conntracker_manager_unittest ConnTrackerManagerUnittest.cpp)
 add_unittest(networkobserver_unittest NetworkObserverUnittest.cpp)
 add_unittest(worker_unittest WorkerUnittest.cpp)
+
+add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
+add_driver_unittest(ebpf_driver_unittest eBPFDriverUnittest.cpp)
