1. update coolbpf 2. add ebpf wrapper ut 3. add ebpf map traits ut

--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -42,3 +42,5 @@ add_unittest(worker_unittest WorkerUnittest.cpp)
 
 add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
 add_driver_unittest(ebpf_driver_unittest eBPFDriverUnittest.cpp)
+add_driver_unittest(ebpf_map_traits_unittest eBPFMapTraitsUnittest.cpp)
+add_driver_unittest(ebpf_wrapper_unittest eBPFWrapperUnittest.cpp)
