--- a/core/unittest/config/CMakeLists.txt
+++ b/core/unittest/config/CMakeLists.txt
@@ -50,6 +50,9 @@ target_link_libraries(pipeline_config_watcher_unittest ${UT_BASE_TARGET})
 add_executable(onetime_config_manager_unittest OnetimeConfigManagerUnittest.cpp)
 target_link_libraries(onetime_config_manager_unittest ${UT_BASE_TARGET})
 
+add_executable(onetime_config_update_unittest OnetimeConfigUpdateUnittest.cpp)
+target_link_libraries(onetime_config_update_unittest ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(pipeline_config_unittest)
 gtest_discover_tests(task_config_unittest)
@@ -62,3 +65,4 @@ gtest_discover_tests(config_feedbackable_unittest)
 gtest_discover_tests(common_config_provider_unittest)
 gtest_discover_tests(pipeline_config_watcher_unittest)
 gtest_discover_tests(onetime_config_manager_unittest)
+gtest_discover_tests(onetime_config_update_unittest)
