--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -35,10 +35,10 @@ add_unittest(protocol_parser_unittest ProtocolParserUnittest.cpp)
 add_unittest(manager_unittest ManagerUnittest.cpp)
 add_unittest(common_util_unittest CommonUtilUnittest.cpp)
 add_unittest(networkobserver_event_unittest NetworkObserverEventUnittest.cpp)
-add_unittest(conntracker_unittest ConnTrackerUnittest.cpp)
-add_unittest(conntracker_manager_unittest ConnTrackerManagerUnittest.cpp)
 add_unittest(networkobserver_unittest NetworkObserverUnittest.cpp)
 add_unittest(worker_unittest WorkerUnittest.cpp)
+add_unittest(connection_unittest ConnectionUnittest.cpp)
+add_unittest(connection_manager_unittest ConnectionManagerUnittest.cpp)
 
 add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
 add_driver_unittest(ebpf_driver_unittest eBPFDriverUnittest.cpp)
