--- a/.github/workflows/static-check.yaml
+++ b/.github/workflows/static-check.yaml
@@ -88,7 +88,7 @@ jobs:
         with:
           clang-format-version: '18'
           check-path: 'core'
-          exclude-regex: 'common/xxhash|labels/Relabel\.cpp|ProcessorParseContainerLogNative\.cpp|FlusherSLS\.cpp|third_party|core/common/LRUCache\.h|core/common/queue/.*|core/common/magic_enum\.hpp'
+          exclude-regex: 'common/xxhash|labels/Relabel\.cpp|ProcessorParseContainerLogNative\.cpp|FlusherSLS\.cpp|_thirdparty|core/common/LRUCache\.h|core/common/queue/.*|core/common/magic_enum\.hpp'
           include-regex: '.*\.(cpp|h)$'
 
       - name: Go Plugin Lint
