rename driver source file

--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -8,7 +8,7 @@ set(COOLBPF_DIR "${CMAKE_BINARY_DIR}/_thirdparty/coolbpf/src")
 
 function(add_driver_unittest target_name source_file)
     add_executable(${target_name} ${source_file})
-    target_link_libraries(${target_name} ${UT_BASE_TARGET} EbpfDriver)
+    target_link_libraries(${target_name} ${UT_BASE_TARGET} eBPFDriver)
     gtest_discover_tests(${target_name})
 endfunction()
 
@@ -19,7 +19,7 @@ function(add_unittest target_name source_file)
     if(target_name STREQUAL "ebpf_server_unittest")
         add_custom_command(TARGET ${target_name} POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy
-            ${EBPF_DRIVER_DIR}/libEbpfDriver.so $<TARGET_FILE_DIR:${target_name}>
+            ${EBPF_DRIVER_DIR}/libeBPFDriver.so $<TARGET_FILE_DIR:${target_name}>
             COMMAND ${CMAKE_COMMAND} -E copy
             ${COOLBPF_DIR}/libcoolbpf.so.1.0.0 $<TARGET_FILE_DIR:${target_name}>
         )
