--- a/core/unittest/input/CMakeLists.txt
+++ b/core/unittest/input/CMakeLists.txt
@@ -47,7 +47,7 @@ set(COOLBPF_DIR "${CMAKE_BINARY_DIR}/_thirdparty/coolbpf/src")
 
 add_custom_command(TARGET input_ebpf_process_security_unittest POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy
-    ${EBPF_DRIVER_DIR}/libEbpfDriver.so $<TARGET_FILE_DIR:input_ebpf_process_security_unittest>
+    ${EBPF_DRIVER_DIR}/libeBPFDriver.so $<TARGET_FILE_DIR:input_ebpf_process_security_unittest>
     COMMAND ${CMAKE_COMMAND} -E copy
     ${COOLBPF_DIR}/libcoolbpf.so.1.0.0 $<TARGET_FILE_DIR:input_ebpf_process_security_unittest>
 )
