--- a/plugins.yml
+++ b/plugins.yml
@@ -43,6 +43,8 @@ plugins:
     - import: "github.com/alibaba/ilogtail/plugins/flusher/sls"
     - import: "github.com/alibaba/ilogtail/plugins/flusher/statistics"
     - import: "github.com/alibaba/ilogtail/plugins/flusher/stdout"
+    - import: "github.com/alibaba/ilogtail/plugins/flusher/datahub"
+    - import: "github.com/alibaba/ilogtail/plugins/flusher/odps"
     - import: "github.com/alibaba/ilogtail/plugins/input/canal"
     - import: "github.com/alibaba/ilogtail/plugins/input/debugfile"
     - import: "github.com/alibaba/ilogtail/plugins/input/docker/event"
