--- a/core/ebpf/driver/CMakeLists.txt
+++ b/core/ebpf/driver/CMakeLists.txt
@@ -34,8 +34,8 @@ if (LINUX)
     endif ()
 
     add_library(${EBPF_DIRVER_TARGET} SHARED ${LIB_SOURCE_FILES})
+    target_link_options(${EBPF_DIRVER_TARGET} PRIVATE "-Wl,-rpath=.:${DEFAULT_DEPS_ROOT}/lib")
     target_link_libraries(${EBPF_DIRVER_TARGET} coolbpf)
     add_dependencies(${EBPF_DIRVER_TARGET} install_coolbpf)
-    target_link_options(${EBPF_DIRVER_TARGET} PRIVATE -Wl,-rpath=".:${DEFAULT_DEPS_ROOT}/lib")
     target_compile_options(${EBPF_DIRVER_TARGET} PRIVATE -fPIC -Werror)
 endif ()
