--- a/core/unittest/common/CMakeLists.txt
+++ b/core/unittest/common/CMakeLists.txt
@@ -66,6 +66,9 @@ target_link_libraries(capability_util_unittest ${UT_BASE_TARGET})
 add_executable(network_util_unittest NetworkUtilUnittest.cpp)
 target_link_libraries(network_util_unittest ${UT_BASE_TARGET})
 
+add_executable(lru_benchmark LRUBenchmark.cpp)
+target_link_libraries(lru_benchmark ${UT_BASE_TARGET})
+
 include(GoogleTest)
 gtest_discover_tests(common_simple_utils_unittest)
 gtest_discover_tests(common_logfileoperator_unittest)
@@ -82,3 +85,4 @@ gtest_discover_tests(proc_parser_unittest)
 gtest_discover_tests(proc_parser_unittest)
 gtest_discover_tests(capability_util_unittest)
 gtest_discover_tests(network_util_unittest)
+gtest_discover_tests(lru_benchmark)
