--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -27,7 +27,7 @@ function(add_unittest target_name source_file)
 endfunction()
 
 add_unittest(aggregator_unittest AggregatorUnittest.cpp)
-add_unittest(ebpf_server_unittest eBPFServerUnittest.cpp)
+add_unittest(ebpf_server_unittest EBPFServerUnittest.cpp)
 add_unittest(sampler_unittest SamplerUnittest.cpp)
 add_unittest(table_unittest TableUnittest.cpp)
 add_unittest(protocol_parser_unittest ProtocolParserUnittest.cpp)
@@ -42,5 +42,5 @@ add_unittest(process_cache_manager_unittest ProcessCacheManagerUnittest.cpp)
 
 add_driver_unittest(id_allocator_unittest IdAllocatorUnittest.cpp)
 add_driver_unittest(ebpf_driver_unittest eBPFDriverUnittest.cpp)
-add_driver_unittest(ebpf_map_traits_unittest eBPFMapTraitsUnittest.cpp)
-add_driver_unittest(ebpf_wrapper_unittest eBPFWrapperUnittest.cpp)
+add_driver_unittest(bpf_map_traits_unittest BPFMapTraitsUnittest.cpp)
+add_driver_unittest(bpf_wrapper_unittest BPFWrapperUnittest.cpp)
