--- a/core/unittest/input/CMakeLists.txt
+++ b/core/unittest/input/CMakeLists.txt
@@ -24,8 +24,8 @@ target_link_libraries(input_container_stdio_unittest ${UT_BASE_TARGET})
 add_executable(input_prometheus_unittest InputPrometheusUnittest.cpp)
 target_link_libraries(input_prometheus_unittest ${UT_BASE_TARGET})
 
-add_executable(input_ebpf_file_security_unittest InputFileSecurityUnittest.cpp)
-target_link_libraries(input_ebpf_file_security_unittest unittest_base)
+# add_executable(input_ebpf_file_security_unittest InputFileSecurityUnittest.cpp)
+# target_link_libraries(input_ebpf_file_security_unittest unittest_base)
 
 add_executable(input_ebpf_process_security_unittest InputProcessSecurityUnittest.cpp)
 target_link_libraries(input_ebpf_process_security_unittest unittest_base)
@@ -62,7 +62,7 @@ include(GoogleTest)
 gtest_discover_tests(input_file_unittest)
 gtest_discover_tests(input_container_stdio_unittest)
 gtest_discover_tests(input_prometheus_unittest)
-gtest_discover_tests(input_ebpf_file_security_unittest)
+# gtest_discover_tests(input_ebpf_file_security_unittest)
 gtest_discover_tests(input_ebpf_process_security_unittest)
 gtest_discover_tests(input_ebpf_network_security_unittest)
 gtest_discover_tests(input_ebpf_network_observer_unittest)
