improve traceId efficiency and fix UT

--- a/core/unittest/ebpf/CMakeLists.txt
+++ b/core/unittest/ebpf/CMakeLists.txt
@@ -33,6 +33,7 @@ add_unittest(table_unittest TableUnittest.cpp)
 add_unittest(protocol_parser_unittest ProtocolParserUnittest.cpp)
 add_unittest(manager_unittest ManagerUnittest.cpp)
 add_unittest(common_util_unittest CommonUtilUnittest.cpp)
+add_unittest(trace_id_benchmark TraceIdBenchmark.cpp)
 add_unittest(networkobserver_event_unittest NetworkObserverEventUnittest.cpp)
 add_unittest(networkobserver_unittest NetworkObserverUnittest.cpp)
 add_unittest(connection_unittest ConnectionUnittest.cpp)
