--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ on:
       - 1.*
 
 jobs:
-  CI:
+  Build:
     runs-on: ${{ matrix.runner }}
     timeout-minutes: 60
     strategy:
@@ -82,7 +82,21 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: false
+
+      - name: Set custom submodule URL and fetch
+        if: steps.cache-submodule.outputs.cache-hit != 'true'
+        run: |
+          TARGET_COMMIT=$(git submodule status | grep "core/_thirdparty/coolbpf" | awk '{print $1}')
+          SUBMODULE_PATH="core/_thirdparty/coolbpf"
+          git config submodule.$SUBMODULE_PATH.url "https://github.com/iLogtail/coolbpf-mirror.git"
+          git submodule init
+          git submodule update --recursive
+          cd $SUBMODULE_PATH
+          git checkout $TARGET_COMMIT
+          echo "Current commit: $(git rev-parse HEAD)"
+          cd core/_thirdparty/coolbpf
+          git log -1
 
       - name: Build Binary
         env:
