--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -113,7 +113,7 @@ jobs:
   result:
     runs-on: arc-runner-set-ilogtail
     timeout-minutes: 60
-    needs: [CI]
+    needs: [Build]
     steps:
       - name: Build Result
         run: echo "Just to make the GitHub merge button green"
