--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -97,7 +97,7 @@ jobs:
   result:
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: [CI]
+    needs: [E2E]
     steps:
       - name: Build Result
         run: echo "Just to make the GitHub merge button green"
