--- a/.github/workflows/static-check.yaml
+++ b/.github/workflows/static-check.yaml
@@ -121,7 +121,7 @@ jobs:
   result:
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: [CI]
+    needs: [StaticCheck]
     steps:
       - name: Build Result
         run: echo "Just to make the GitHub merge button green"
