--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,9 +85,8 @@ jobs:
           submodules: false
 
       - name: Set custom submodule URL and fetch
-        if: steps.cache-submodule.outputs.cache-hit != 'true'
         run: |
-          TARGET_COMMIT=$(git submodule status | grep "core/_thirdparty/coolbpf" | awk '{print $1}')
+          TARGET_COMMIT=$(git submodule status | grep "core/_thirdparty/coolbpf" | awk '{print $1}' | tr -d '[:space:]')
           SUBMODULE_PATH="core/_thirdparty/coolbpf"
           git config submodule.$SUBMODULE_PATH.url "https://github.com/iLogtail/coolbpf-mirror.git"
           git submodule init
@@ -95,8 +94,6 @@ jobs:
           cd $SUBMODULE_PATH
           git checkout $TARGET_COMMIT
           echo "Current commit: $(git rev-parse HEAD)"
-          cd core/_thirdparty/coolbpf
-          git log -1
 
       - name: Build Binary
         env:
