--- a/.github/workflows/build-core-ut.yaml
+++ b/.github/workflows/build-core-ut.yaml
@@ -86,9 +86,8 @@ jobs:
           fetch-depth: 2
       
       - name: Set custom submodule URL and fetch
-        if: steps.cache-submodule.outputs.cache-hit != 'true'
         run: |
-          TARGET_COMMIT=$(git submodule status | grep "core/_thirdparty/coolbpf" | awk '{print $1}')
+          TARGET_COMMIT=$(git submodule status | grep "core/_thirdparty/coolbpf" | awk '{print $1}' | tr -d '[:space:]')
           SUBMODULE_PATH="core/_thirdparty/coolbpf"
           git config submodule.$SUBMODULE_PATH.url "https://github.com/iLogtail/coolbpf-mirror.git"
           git submodule init
@@ -96,8 +95,6 @@ jobs:
           cd $SUBMODULE_PATH
           git checkout $TARGET_COMMIT
           echo "Current commit: $(git rev-parse HEAD)"
-          cd core/_thirdparty/coolbpf
-          git log -1
 
       - name: Build Unit Test
         env:
