--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -71,8 +71,16 @@ jobs:
           git submodule init
           git submodule update --recursive
           cd $SUBMODULE_PATH
-          git checkout $TARGET_COMMIT
-          echo "Current commit: $(git rev-parse HEAD)"
+          CURRENT_COMMIT=$(git rev-parse HEAD)
+          echo "Current commit: $CURRENT_COMMIT"
+          echo "Expected commit_id: $TARGET_COMMIT"
+          if [ "$CURRENT_COMMIT" != "$TARGET_COMMIT" ]; then
+            echo "Commit mismatch - performing checkout"
+            git checkout $TARGET_COMMIT
+          else
+            echo "Already at target commit, skipping checkout"
+          fi
+          echo "Final commit: $(git rev-parse HEAD)"
 
       - name: Update Docker-compose to v2
         run: |
