--- a/.github/workflows/build-core.yaml
+++ b/.github/workflows/build-core.yaml
@@ -88,8 +88,7 @@ jobs:
         run: |
           SUBMODULE_PATH="core/_thirdparty/coolbpf"
           git config submodule.$SUBMODULE_PATH.url "https://github.com/iLogtail/coolbpf-mirror.git"
-          git submodule init
-          git submodule update --recursive
+          git submodule update --init
           cd $SUBMODULE_PATH
           echo "Current commit: $(git rev-parse HEAD)"
 
