--- a/core/unittest/input/CMakeLists.txt
+++ b/core/unittest/input/CMakeLists.txt
@@ -71,7 +71,7 @@ if (LINUX)
     gtest_discover_tests(input_prometheus_unittest)
     gtest_discover_tests(input_host_meta_unittest)
     gtest_discover_tests(input_container_stdio_unittest)
-    gtest_discover_tests(input_ebpf_file_security_unittest)
+    # gtest_discover_tests(input_ebpf_file_security_unittest)
     gtest_discover_tests(input_ebpf_process_security_unittest)
     gtest_discover_tests(input_ebpf_network_security_unittest)
     gtest_discover_tests(input_ebpf_network_observer_unittest)
