--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -85,7 +85,7 @@ elseif (MSVC)
     # remove WinSock1
     add_definitions(-DWIN32_LEAN_AND_MEAN)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /MP /Zi")
-    # /DEBUG will generate many "pdb not found" warning.
+    # /DEBUG will generate many "pdb not found" warnings.
     set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
     set(CMAKE_STATIC_LINKER_FLAGS_RELEASE "${CMAKE_STATIC_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
     set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
